ConnexoProject/force-app/main/default/objects/IP_Restriction_Platform_Event__e/IP_Restriction_Platform_Event__e.object-meta.xml
<CustomObject>
    <description>IP Restriction Platform Event</description>
    <label>IP Restriction Platform Event</label>
    <pluralLabel>IP Restriction Platform Events</pluralLabel>
</CustomObject>