ConnexoProject/force-app/main/default/objects/IP_Restriction_Platform_Event__e/fields/Rendition_Url__c.field-meta.xml
<CustomField>
    <fullName>Rendition_Url__c</fullName>
    <label>Rendition Url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>