ConnexoProject/force-app/main/default/objects/IP_Restriction_Platform_Event__e/fields/Rendition_URL_Long__c.field-meta.xml
<CustomField>
    <fullName>Rendition_URL_Long__c</fullName>
    <label>Rendition URL Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>