ConnexoProject/force-app/main/default/objects/IP_Restriction_Platform_Event__e/fields/User_Email__c.field-meta.xml
<CustomField>
    <fullName>User_Email__c</fullName>
    <label>User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>